reset password part 1

--- a/ShoppingCart/src/main/resources/application.properties
+++ b/ShoppingCart/src/main/resources/application.properties
@@ -5,3 +5,9 @@ spring.datasource.username=root
 spring.datasource.password=Randompass1@
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
+
+spring.mail.host=smtp.gmail.com
+spring.mail.username=test@gmail.com
+spring.mail.password="Randompass1@"
+spring.mail.port=587
+spring.mail.properties.smtp.auth=true
