--- a/ShoppingCart/src/main/resources/application.properties
+++ b/ShoppingCart/src/main/resources/application.properties
@@ -7,7 +7,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 
 spring.mail.host=smtp.gmail.com
-spring.mail.username=test@gmail.com
-spring.mail.password="Randompass1@"
+spring.mail.username=tobeinserted
+spring.mail.password=tobeinserted
 spring.mail.port=587
-spring.mail.properties.smtp.auth=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
