--- a/ShoppingCart/src/main/resources/application.properties
+++ b/ShoppingCart/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 
 spring.mail.host=smtp.gmail.com
-spring.mail.username=confidential
-spring.mail.password=confidential
+spring.mail.username=sabamaghradze1001@gmail.com
+spring.mail.password=vejzmknzyugyfaug
 spring.mail.port=587
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
