--- a/ShoppingCart/src/main/resources/application.properties
+++ b/ShoppingCart/src/main/resources/application.properties
@@ -2,13 +2,13 @@ spring.application.name=ShoppingCart
 spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce_db
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=Randompass1@
+spring.datasource.password=confidential
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 
 spring.mail.host=smtp.gmail.com
-spring.mail.username=sabamaghradze1001@gmail.com
-spring.mail.password=vejzmknzyugyfaug
+spring.mail.username=confidential
+spring.mail.password=confidential
 spring.mail.port=587
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
