--- a/ShoppingCart/src/main/resources/application.properties
+++ b/ShoppingCart/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=ShoppingCart
-spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce_db
+spring.datasource.url=confidential
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
+spring.datasource.username=confidential
 spring.datasource.password=confidential
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
