--- a/ShoppingCart/src/main/resources/application.properties
+++ b/ShoppingCart/src/main/resources/application.properties
@@ -1,14 +1,17 @@
 spring.application.name=ShoppingCart
-spring.datasource.url=confidential
+spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce_db
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=confidential
-spring.datasource.password=confidential
+spring.datasource.username=root
+spring.datasource.password=Randompass1@
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 
 spring.mail.host=smtp.gmail.com
-spring.mail.username=confidential
-spring.mail.password=confidential
+spring.mail.username=sabamaghradze1001@gmail.com
+spring.mail.password=vejzmknzyugyfaug
 spring.mail.port=587
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
